# iced_notes

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/notes/: app.rs  buttons.rs  common.rs  constants.rs  icons.rs  mod.rs  models.rs  post_details.rs  post_list.rs  storage.rs  styles.rs
