[package]
name = "iced_notes"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# iced = { version = "0.10.0", features = ["async-std", "advanced"] }
iced = { git = "https://github.com/iced-rs/iced.git", features = ["async-std", "highlighter", "tokio", "debug"] }
iced_aw = { version = "0.7.0" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.15", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
serde_with = { version = "3.5.0", features = ["json"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.6.2"
directories-next = "2.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"